2007-11-28	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* user/clock.t, user/concepts.t, user/conf.t, user/datatypes.t,
	user/dpmem.t, user/fatal.t, user/init.t, user/mp.t, user/msg.t,
	user/part.t, user/region.t, user/rtmon.t, user/sem.t, user/task.t,
	user/timer.t: Corrected various errors in the documentation.

2007-11-27	Joel Sherrill <joel.sherrill@OARcorp.com>

	* develenv/develenv.texi, develenv/direct.t, develenv/intro.texi,
	develenv/sample.t, develenv/utils.t: Update directory tree.

2007-05-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Fix typo -- should have read kilobytes.

2007-04-13	Joel Sherrill <joel@OARcorp.com>

	* user/task.t: Add rtems_iterate_over_all_threads.

2007-03-10	Joel Sherrill <joel@OARcorp.com>

	PR 1226/cpukit
	* user/conf.t: CONFIGURE_HAS_OWN_MULTIPROCESSING_TABLE not
	CONFIGURE_HAS_OWN_MULTIPROCESING_TABLE.

2007-03-02	Joel Sherrill <joel@OARcorp.com>

	PR 1221/doc
	* user/rtmon.t: Add missing exponent operator in RMS CPU Utilization
	formula.

2007-01-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* common/rtems.texi.in: Use bugzilla for RTEMSBUGS.
	Remove RTEMSGNATS.
	* started/binaries.t, started/buildc.t, started/tversions.texi.in:
	Various update to reflect current toolchains.
	* configure.ac: Reflect having moved setup.def.
	Eliminate gcc3*.	
	* setup.def: New (Formerly in ../scripts).

2006-12-20	Joel Sherrill <joel@OARcorp.com>

	* posix_users/thread.t: Correct spelling error.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpu_supplement/Makefile.am, cpu_supplement/cpu_supplement.texi:
	Remove the tic4x.

2006-10-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require automake-1.10. Require autoconf-2.60.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* porting/interrupts.t: Fix bogus _CPU_ISR_Get_level.

2006-09-07	Ken Peters <ken.peters@jpl.nasa.gov>

	PR 1171/doc